# scraping-etl

./: .gitignore  README.md  pyproject.toml  sample.html
src/scraping_etl/: main.py
